# rCleaner

./: Cargo.toml  README.md
docs/: DEPENDENCIES_REVIEW.md  plan.md
src/: config.rs  error.rs  lib.rs  main.rs  models.rs
src/backup/: manager.rs  mod.rs  rollback.rs
src/cleaner/: applications.rs  base.rs  cache.rs  logs.rs  mod.rs  old_kernels.rs  old_packages.rs  temp_files.rs
src/safety/: blacklist.rs  dependency_check.rs  mod.rs  permissions.rs  rules.rs  whitelist.rs
src/system/: apt.rs  detection.rs  dnf.rs  flatpak.rs  mod.rs  package_manager.rs  pacman.rs  rpm.rs  rpm_ostree.rs  snap.rs
src/tui/: action.rs  app.rs  dispatcher.rs  mod.rs  state.rs  store.rs
src/tui/screens/: cleanup.rs  common.rs  confirm.rs  main.rs  mod.rs  progress.rs  results.rs  settings.rs
src/tui/widgets/: buttons.rs  info_panel.rs  mod.rs  progress_bar.rs  selectable_list.rs  status_bar.rs  tabs.rs
src/utils/: cache.rs  command.rs  file_utils.rs  logger.rs  mod.rs  size_format.rs
tests/: config_roundtrip.rs
