[package]
name = "rcleaner"
version = "0.9.0"
edition = "2024"

[dependencies]
# TUI и терминал
ratatui = "0.29"
crossterm = "0.29"

# Системная информация
sysinfo = "0.37"

# Сериализация
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Обработка ошибок
anyhow = "1.0"
thiserror = "1.0"

# Логирование
log = "0.4"
env_logger = "0.11"

# Файловые операции
walkdir = "2.5"
fs_extra = "1.3"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }

# Системные утилиты
sudo = "0.6"
regex = "1.10"
lazy_static = "1.5"
libc = "0.2"

# Параллелизм и производительность
tokio = { version = "1.41", features = ["full"] }
rayon = "1.10"

# systemd (ПРЕДПОЧИТЕЛЬНЫЙ - чистый Rust без внешних зависимостей)
libsystemd = "0.7"

# Опционально для пакетных менеджеров
# librpm удалён из-за критичных уязвимостей (RUSTSEC-2022-0013, RUSTSEC-2022-0006)
# в цепочке зависимостей (bindgen 0.35.0 → regex 0.2.11)
# RPM поддержка реализована через вызов команды rpm напрямую
flatpak = { version = "0.18", optional = true }

[features]
default = ["systemd"]
systemd = []
flatpak = ["dep:flatpak"]
all-managers = ["flatpak"]

[[bin]]
name = "rcleaner"
path = "src/main.rs"
